feat: add Mistral LLM provider support
- Add MISTRAL to LLMProviderType enum in backend
- Add MISTRAL_API_KEY to .env.example
- Add Mistral configuration to config.yml.example with:
  - Endpoint: https://api.mistral.ai/v1
  - Default model: mistral-large-latest
  - Rate limit: 80 req/min, 1200 req/day

--- a/config.yml.example
+++ b/config.yml.example
@@ -74,6 +74,16 @@ providers:
         defaultModel: anthropic/claude-3-opus
       rateLimit: 60
 
+    - name: Mistral
+      type: mistral
+      endpoint: https://api.mistral.ai/v1
+      apiKey: ${MISTRAL_API_KEY}
+      isActive: false
+      config:
+        defaultModel: mistral-large-latest
+      rateLimit: 80
+      dailyLimit: 1200
+
   # Search Providers
   search:
     - name: Exa
