--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ ANTHROPIC_API_KEY=
 GOOGLE_API_KEY=
 GROQ_API_KEY=
 OPENROUTER_API_KEY=
+MISTRAL_API_KEY=
 
 # Search Providers (Add your API keys here)
 EXA_API_KEY=
