--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -13,9 +11,6 @@ services:
       - .env
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3001}
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     restart: unless-stopped
 
   backend:
@@ -43,16 +38,13 @@ services:
       - EXA_API_KEY=${EXA_API_KEY}
       - BRAVE_API_KEY=${BRAVE_API_KEY}
       - TAVILY_API_KEY=${TAVILY_API_KEY}
-      - SERPER_API_KEY=${SERPER_API_KEY}
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
+      - MISTRAL_API_KEY=${MISTRAL_API_KEY}
     restart: unless-stopped
 
   postgres:
     image: postgres:15-alpine
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     environment:
       - POSTGRES_DB=${DATABASE_NAME:-enrichify}
       - POSTGRES_USER=${DATABASE_USER:-enrichify}
@@ -64,8 +56,8 @@ services:
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - redis_data:/data
     restart: unless-stopped
