fix: resolve TypeORM entity registration and frontend port binding
Critical fixes to get all services running properly:

- Register UserApiKey entity in UsersModule to fix TypeORM relationship error
  * User entity has @OneToMany relationship to UserApiKey
  * TypeORM needs both entities registered when they have relationships
  * Fixes "Entity metadata for User#apiKeys was not found" error

- Fix frontend port binding in Docker
  * Set HOSTNAME=0.0.0.0 to bind on all interfaces (required for Docker)
  * Set PORT=3000 explicitly (override PORT=3001 from .env meant for backend)
  * Frontend now accessible on port 8080 via nginx reverse proxy

All services now running successfully:
- Frontend: HTTP 200 on port 8080 (temp.kabirstudios.com)
- Backend: Running on port 3001 with all routes mapped
- PostgreSQL & Redis: Internal only, no port conflicts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - .env
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3001}
+      - HOSTNAME=0.0.0.0
+      - PORT=3000
     restart: unless-stopped
 
   backend:
