feat: add admin user seeding on startup from env vars
- Create SeedService that initializes admin user if ADMIN_USERNAME env var is set
- Runs automatically on app startup via OnModuleInit lifecycle hook
- Credentials: admin / Admin@123456 (set in .env)
- Idempotent: skips creation if admin already exists

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,8 @@ SERPER_API_KEY=
 # Optional: Use config.yml instead of environment variables
 # Set to true to load configuration from config.yml
 # CONFIG_FROM_FILE=false
+
+# Admin User (created on first startup if user doesn't exist)
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@enrichify.local
+ADMIN_PASSWORD=changeme123
