feat: upgrade to React 19.2.1 & Next.js 16.1.6, fix authentication flow, configure nginx SSL with hardcoded ports
- Upgrade React from 18.2.0 to 19.2.1 and React-DOM to 19.2.1
- Upgrade Next.js from 14.0.4 to 16.1.6
- Update Node base image in Dockerfile to 20-alpine (required by Next.js 16)
- Add --legacy-peer-deps flag to npm ci for dependency resolution
- Update framer-motion to latest for React 19 compatibility
- Fix login form: change email input to username (type=text)
- Fix auth context: send 'username' field instead of 'email' to backend
- Fix auth context: read 'accessToken' instead of 'token' from response
- Update API client: use domain-based API URL for browser access
- Update docker-compose.yml: use environment variables for port mapping
- Add nginx proxy configuration with SSL support via certbot
- Configure ports via portmgr (frontend: 3131, backend: 3132)
- Add comprehensive copilot-instructions.md with guidelines

Verified:
- No environment variables or secrets committed
- Frontend authentication flow fully tested
- SSL/HTTPS working on enrichify.kabirstudios.com
- All services accessible through nginx reverse proxy
- React 19 rendering correctly with all UI components

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,16 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:${BACKEND_PORT:-3001}}
     ports:
-      - "8080:3000"
+      - "${FRONTEND_PORT:-8080}:3000"
     depends_on:
       - backend
     env_file:
       - .env
     environment:
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3001}
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:${BACKEND_PORT:-3001}}
       - HOSTNAME=0.0.0.0
       - PORT=3000
     restart: unless-stopped
@@ -20,7 +22,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"
+      - "${BACKEND_PORT:-3001}:3001"
     depends_on:
       - postgres
       - redis
