--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,12 +34,12 @@
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^12.30.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "16.1.6",
     "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.71.1",
     "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
@@ -51,8 +51,8 @@
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.58.1",
     "@types/node": "^20.19.30",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
