--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ PORT=3001
 # Frontend (Next.js)
 NEXT_PUBLIC_API_URL=http://localhost:3001
 FRONTEND_PORT=8080
+BACKEND_PORT=3001
 
 # Database
 DATABASE_URL=postgresql://enrichify:password@postgres:5432/enrichify
