feat: implement export functionality, webset snapshots, enhanced error handling, and health endpoint

--- a/.env.example
+++ b/.env.example
@@ -3,49 +3,107 @@
 # NEVER commit .env - keep sensitive data private
 
 # Application
-NODE_ENV=development
-PORT=3001
+NODE_ENV=development                 # Environment mode (development, production, test)
+PORT=3001                           # Backend server port
+FRONTEND_PORT=8080                  # Frontend server port (for development)
+BACKEND_PORT=3001                   # Backend server port (for development)
 
 # Frontend (Next.js)
-NEXT_PUBLIC_API_URL=http://localhost:3001
-FRONTEND_PORT=8080
-BACKEND_PORT=3001
+NEXT_PUBLIC_API_URL=http://localhost:3001  # API URL accessible to frontend (use domain in production)
 
-# Database
-DATABASE_URL=postgresql://enrichify:password@postgres:5432/enrichify
-DATABASE_HOST=postgres
-DATABASE_PORT=5432
-DATABASE_USER=enrichify
-DATABASE_PASSWORD=password
-DATABASE_NAME=enrichify
+# Database Configuration
+# For production, use strong passwords and secure connection strings
+DATABASE_URL=postgresql://enrichify:password@postgres:5432/enrichify  # Full connection string
+DATABASE_HOST=postgres              # Database host (use IP or domain in production)
+DATABASE_PORT=5432                  # Database port
+DATABASE_USER=enrichify             # Database username
+DATABASE_PASSWORD=password          # Database password (use strong password in production)
+DATABASE_NAME=enrichify             # Database name
+POSTGRES_DB=enrichify               # Database name for Docker initialization
+POSTGRES_USER=enrichify             # Database user for Docker initialization
+POSTGRES_PASSWORD=password          # Database password for Docker initialization
 
-# Redis
-REDIS_HOST=redis
-REDIS_PORT=6379
+# Redis Configuration
+# For production, use password authentication and secure connections
+REDIS_HOST=redis                   # Redis host (use IP or domain in production)
+REDIS_PORT=6379                    # Redis port
+# REDIS_PASSWORD=your_redis_password  # Uncomment and set if Redis requires password authentication
 
-# JWT
-JWT_SECRET=your-secret-key-change-in-production
-JWT_EXPIRES_IN=7d
+# JWT Authentication
+# Generate a strong secret key for production (at least 32 characters)
+JWT_SECRET=your-secret-key-change-in-production  # Secret key for signing JWT tokens
+JWT_EXPIRES_IN=7d                  # Token expiration time (e.g., 7d, 24h, 60m)
 
-# LLM Providers (Add your API keys here)
-OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-GOOGLE_API_KEY=
-GROQ_API_KEY=
-OPENROUTER_API_KEY=
-MISTRAL_API_KEY=
+# LLM Providers (Bring Your Own Key - BYOK Model)
+# To use these providers, you need to obtain API keys from their respective platforms
+# The BYOK model means you pay for the API usage directly to the provider
+# Enrichify does not store or transmit your API keys to any third party
 
-# Search Providers (Add your API keys here)
-EXA_API_KEY=
-BRAVE_API_KEY=
-TAVILY_API_KEY=
-SERPER_API_KEY=
+# OpenAI Provider
+# Sign up at: https://platform.openai.com/
+# Required permissions: API access
+OPENAI_API_KEY=                    # Your OpenAI API key (starts with sk-...)
+
+# Anthropic Claude Provider
+# Sign up at: https://www.anthropic.com/
+# Required permissions: API access
+ANTHROPIC_API_KEY=                 # Your Anthropic API key (starts with sk-ant-...)
+
+# Google Gemini Provider
+# Sign up at: https://ai.google.dev/
+# Required permissions: API access with billing enabled
+GOOGLE_API_KEY=                    # Your Google API key (starts with AI...)
+
+# Groq Provider
+# Sign up at: https://console.groq.com/
+# Required permissions: API access
+GROQ_API_KEY=                      # Your Groq API key (starts with gsk_...)
+
+# OpenRouter Provider
+# Sign up at: https://openrouter.ai/
+# Required permissions: API access
+OPENROUTER_API_KEY=                # Your OpenRouter API key (starts with sk-or-...)
+
+# Mistral Provider
+# Sign up at: https://docs.mistral.ai/
+# Required permissions: API access
+MISTRAL_API_KEY=                   # Your Mistral API key
+
+# Search Providers (Bring Your Own Key - BYOK Model)
+# Similar to LLM providers, you need to obtain API keys from these platforms
+# The BYOK model ensures you maintain control over your API usage and billing
+
+# Exa Search Provider
+# Sign up at: https://exa.ai/
+# Required permissions: API access
+EXA_API_KEY=                       # Your Exa API key
+
+# Brave Search Provider
+# Sign up at: https://brave.com/search/api/
+# Required permissions: API access
+BRAVE_API_KEY=                     # Your Brave API key
+
+# Tavily Search Provider
+# Sign up at: https://tavily.com/
+# Required permissions: API access
+TAVILY_API_KEY=                    # Your Tavily API key (starts with tvly-...)
+
+# Serper Search Provider
+# Sign up at: https://serper.dev/
+# Required permissions: API access
+SERPER_API_KEY=                    # Your Serper API key
 
 # Optional: Use config.yml instead of environment variables
-# Set to true to load configuration from config.yml
+# Set to true to load configuration from config.yml instead of environment variables
 # CONFIG_FROM_FILE=false
 
 # Admin User (created on first startup if user doesn't exist)
-ADMIN_USERNAME=admin
-ADMIN_EMAIL=admin@enrichify.local
-ADMIN_PASSWORD=changeme123
+# Change these default credentials immediately after first login in production
+ADMIN_USERNAME=admin              # Default admin username
+ADMIN_EMAIL=admin@enrichify.local # Default admin email
+ADMIN_PASSWORD=changeme123        # Default admin password (change in production!)
+
+# Advanced Configuration
+# BULLMQ_REDIS_URL=redis://redis:6379  # Redis connection string for BullMQ (if different from above)
+# LOG_LEVEL=info                      # Logging level (error, warn, info, debug, verbose, silly)
+# MAX_ENRICHMENT_ROWS=10000          # Maximum number of rows that can be enriched in a single job
