--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "bullmq": "^4.11.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv-parser": "^3.2.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^171.0.0",
     "js-yaml": "^4.1.1",
