feat: implement robust API key encryption

--- a/.env.example
+++ b/.env.example
@@ -107,3 +107,7 @@ ADMIN_PASSWORD=changeme123        # Default admin password (change in production
 # BULLMQ_REDIS_URL=redis://redis:6379  # Redis connection string for BullMQ (if different from above)
 # LOG_LEVEL=info                      # Logging level (error, warn, info, debug, verbose, silly)
 # MAX_ENRICHMENT_ROWS=10000          # Maximum number of rows that can be enriched in a single job
+
+# Encryption Configuration
+# Generate a strong encryption key (32 bytes) using: openssl rand -hex 32
+ENCRYPTION_SECRET_KEY=your_32_byte_hex_encryption_key_here  # Secret key for encrypting API keys (32-byte hex string)
