--- a/backend/package.json
+++ b/backend/package.json
@@ -62,6 +62,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
